.metadata/.plugins/org.eclipse.cdt.ui/probe.build.log
19:43:02 **** Build of configuration Debug for project probe ****
make -j4 all 
Building file: ../Project_Settings/Startup_Code/startup.c
Building file: ../Project_Settings/Startup_Code/startup_S32K144.S
Building file: ../Project_Settings/Startup_Code/system_S32K144.c
Building file: ../src/main.c
Executing target #1 ../Project_Settings/Startup_Code/startup.c
Executing target #2 ../Project_Settings/Startup_Code/startup_S32K144.S
Executing target #3 ../Project_Settings/Startup_Code/system_S32K144.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
Invoking: Standard S32DS Assembler
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@Project_Settings/Startup_Code/startup.args" -MMD -MP -MF"Project_Settings/Startup_Code/startup.d" -MT"Project_Settings/Startup_Code/startup.o" -o "Project_Settings/Startup_Code/startup.o" "../Project_Settings/Startup_Code/startup.c"
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@Project_Settings/Startup_Code/startup_S32K144.args" -o "Project_Settings/Startup_Code/startup_S32K144.o" "../Project_Settings/Startup_Code/startup_S32K144.S"
arm-none-eabi-gcc "@Project_Settings/Startup_Code/system_S32K144.args" -MMD -MP -MF"Project_Settings/Startup_Code/system_S32K144.d" -MT"Project_Settings/Startup_Code/system_S32K144.o" -o "Project_Settings/Startup_Code/system_S32K144.o" "../Project_Settings/Startup_Code/system_S32K144.c"
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c:3:22: warning: "/*" within comment [-Wcomment]
 #include "S32K144.h" /* include peripheral declarations S32K144 */
 ^
../src/main.c: In function 'delay':
../src/main.c:7:2: error: 'LPTMR0' undeclared (first use in this function)
  LPTMR0->CSR=1; //enable timer flag on
  ^
../src/main.c:7:2: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c: In function 'main':
../src/main.c:17:2: error: 'PCC' undeclared (first use in this function)
  PCC->PCCn[PCC_PORTB_INDEX]=0X40000000;
  ^
../src/main.c:17:12: error: 'PCC_PORTB_INDEX' undeclared (first use in this function)
  PCC->PCCn[PCC_PORTB_INDEX]=0X40000000;
            ^
../src/main.c:19:3: error: 'PORTB' undeclared (first use in this function)
   PORTB->PCR[14]=0X00000100;
   ^
../src/main.c:24:3: error: 'PTD' undeclared (first use in this function)
   PTD->PDDR=0X0003C000;
   ^
../src/main.c:27:13: error: 'PCC_LPTMR0_INDEX' undeclared (first use in this function)
   PCC->PCCn[PCC_LPTMR0_INDEX]=0X40000000;
             ^
../src/main.c:28:3: error: 'LPTMR0' undeclared (first use in this function)
   LPTMR0->PSR=5; //byepass
   ^
../src/main.c:29:15: error: 'tiempo' undeclared (first use in this function)
   LPTMR0->CMR=tiempo-1;//500 cuentas de 1 ms
               ^
../src/main.c:37:12: error: too few arguments to function 'delay'
            delay();
            ^
../src/main.c:4:6: note: declared here
 void delay (unsigned short tiempo)
      ^
../src/main.c:40:12: error: too few arguments to function 'delay'
            delay();
            ^
../src/main.c:4:6: note: declared here
 void delay (unsigned short tiempo)
      ^
../src/main.c:43:12: error: too few arguments to function 'delay'
            delay();
            ^
../src/main.c:4:6: note: declared here
 void delay (unsigned short tiempo)
      ^
../src/main.c:46:12: error: too few arguments to function 'delay'
            delay();
            ^
../src/main.c:4:6: note: declared here
 void delay (unsigned short tiempo)
      ^
make: *** [src/subdir.mk:35: src/main.o] Error 1
make: *** Waiting for unfinished jobs....
Finished building: ../Project_Settings/Startup_Code/startup_S32K144.S
 
Finished building: ../Project_Settings/Startup_Code/startup.c
 
Finished building: ../Project_Settings/Startup_Code/system_S32K144.c
 

19:43:03 Build Finished (took 1s.60ms)

